--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -64,6 +64,15 @@
                     </a>
                 </li>
 
+                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                    <a class="btn btn-outline-secondary me-2"
+                       th:href="@{/admin(lang=${#locale.language})}"
+                       th:text="#{dashboard.nav.admin}">
+                        Admin Panel
+                    </a>
+                </li>
+
+
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="btn btn-outline-secondary me-2"
                        th:href="@{/profile}"
